<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GN</string>
    <string name="api_key">Enter your API key here.</string>
    <string name="toast_browser_unavailable">Browser was not available.</string>
    <string name="feed_not_available">No Feed Available</string>
    <string name="search_failed">No Result Found</string>
    <string name="toast_query_unavailable">Provide query to search news.</string>
    <string name="default_search_query">World</string>
    <string name="news_not_available">No News Available\n\nGo Back</string>
    <string name="episodes_not_available">No Episodes Available\n\nGo Back</string>
    <string name="connection_available">Connection Available</string>
    <string name="message_welcome">Welcome</string>
    <string name="hint_search">Search....</string>
    <string name="connection_unavailable">Connection Unavailable</string>
    <string name="label_explicit">Warning: Explicit Content</string>
    <string name="top_news_serial"><xliff:g id="number">%d</xliff:g>/5</string>
    <string name="label_social">Social Media</string>
    <string name="label_social_about">All the day\'s headlines and highlights direct to you. Find us on:</string>
    <string name="label_discover">Discover</string>
    <string name="label_game">The\nGuardian\nPuzzles App</string>
    <string name="label_get_app">Get the App</string>
    <string name="label_get_involved">Get Involved</string>
    <string name="label_readers">Readers</string>
    <string name="label_community">Guardian\nWeekly\'s\nGlobal Community</string>
    <string name="button_listen">Listen</string>
    <string name="top_story_world">World</string>
    <string name="top_story_us">US</string>
    <string name="top_story_uk">UK</string>
    <string name="top_story_aus">Australia</string>
    <string name="title_world_news">World News</string>
    <string name="title_us_news">US News</string>
    <string name="title_uk_news">UK News</string>
    <string name="title_aus_news">Australia News</string>
    <string name="labelSeeMore">See More</string>
    <string name="podcast_title">Today in Focus</string>
    <string name="podcast_about">Hosted by Nosheen Iqbal and Michael Safi, Today in Focus brings you closer to Guardian journalism. Combining personal storytelling with insightful analysis, this episode takes you behind the newsFeeds for a deeper understanding of the news, every weekday.</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_categories">Categories</string>
    <string name="bottom_podcast">Podcast</string>
    <string name="action_search">Search</string>
    <string name="default_content_description">Image</string>
    <string name="title_news">News</string>
    <string name="title_sport">Sport</string>
    <string name="title_culture">Culture</string>
    <string name="title_lifestyle">Lifestyle</string>
    <string name="title_more">More</string>
    <string name="category_title_art_and_design">Art and Design</string>
    <string name="category_path_art_and_design">artanddesign</string>
    <string name="category_title_books">Books</string>
    <string name="category_path_books">books</string>
    <string name="category_title_business">Business</string>
    <string name="category_path_business">business</string>
    <string name="category_title_classical_music_and_opera">Classical</string>
    <string name="category_path_classical_music_and_opera">music/classical-music-and-opera</string>
    <string name="category_title_climate_crisis">Climate Crisis</string>
    <string name="category_path_climate_crisis">environment/climate-crisis</string>
    <string name="category_title_coronavirus">Coronavirus</string>
    <string name="category_path_coronavirus">world/coronavirus-outbreak</string>
    <string name="category_title_cricket">Cricket</string>
    <string name="category_path_cricket">sport/cricket</string>
    <string name="category_title_culture">Culture</string>
    <string name="category_path_culture">culture</string>
    <string name="category_title_cycling">Cycling</string>
    <string name="category_path_cycling">sport/cycling</string>
    <string name="title_editorial_news">Editorial</string>
    <string name="category_title_education">Education</string>
    <string name="category_path_education">education</string>
    <string name="category_title_environment">Environment</string>
    <string name="category_path_environment">environment</string>
    <string name="category_title_f1">F1</string>
    <string name="category_path_f1">sport/formulaone</string>
    <string name="category_title_family">Family</string>
    <string name="category_path_family">lifeandstyle/family</string>
    <string name="category_title_fashion">Fashion</string>
    <string name="category_path_fashion">fashion</string>
    <string name="category_title_film">Film</string>
    <string name="category_path_film">uk/film</string>
    <string name="category_title_food">Food</string>
    <string name="category_path_food">food</string>
    <string name="category_title_football">Football</string>
    <string name="category_path_football">football</string>
    <string name="category_title_games">Games</string>
    <string name="category_path_games">games</string>
    <string name="category_title_global_development">Global Development</string>
    <string name="category_path_global_development">global-development</string>
    <string name="category_title_golf">Golf</string>
    <string name="category_path_golf">sport/golf</string>
    <string name="category_title_health_and_fitness">Health and Fitness</string>
    <string name="category_path_health_and_fitness">lifeandstyle/health-and-wellbeing</string>
    <string name="category_title_men">Men</string>
    <string name="category_path_men">lifeandstyle/men</string>
    <string name="category_title_money">Money</string>
    <string name="category_path_money">money</string>
    <string name="category_title_music">Music</string>
    <string name="category_path_music">music</string>
    <string name="category_title_obituaries">Obituaries</string>
    <string name="category_path_obituaries">tone/obituaries</string>
    <string name="category_title_opinion">Opinion</string>
    <string name="category_path_opinion">commentisfree</string>
    <string name="category_title_politics">Politics</string>
    <string name="category_path_politics">politics</string>
    <string name="category_title_recipes">Recipes</string>
    <string name="category_path_recipes">tone/recipes</string>
    <string name="category_title_rugby">Rugby union</string>
    <string name="category_path_rugby">sport/rugby-union</string>
    <string name="category_title_science">Science</string>
    <string name="category_path_science">science</string>
    <string name="category_title_society">Society</string>
    <string name="category_path_society">society</string>
    <string name="category_title_stage">Stage</string>
    <string name="category_path_stage">stage</string>
    <string name="category_title_technology">Tech</string>
    <string name="category_path_technology">technology</string>
    <string name="category_title_tennis">Tennis</string>
    <string name="category_path_tennis">sport/tennis</string>
    <string name="category_title_travel">Travel</string>
    <string name="category_path_travel">uk/travel</string>
    <string name="category_title_us_sports">US Sports</string>
    <string name="category_path_us_sports">sport/us-sport</string>
    <string name="category_title_women">Women</string>
    <string name="category_path_women">lifeandstyle/women</string>
    <string name="podcast_title_today_in_focus">Today in Focus</string>
    <string name="podcast_path_today_in_focus">news/series/todayinfocus</string>
    <string name="podcast_title_football_weekly">Football Weekly</string>
    <string name="podcast_path_football_weekly">football/series/footballweekly</string>
    <string name="podcast_title_the_audio_long_read">The Audio Long Read</string>
    <string name="podcast_path_the_audio_long_read">news/series/the-audio-long-read</string>
    <string name="podcast_title_politics_weekly">Politics Weekly</string>
    <string name="podcast_path_politics_weekly">politics/series/politicsweekly</string>
    <string name="podcast_title_science_weekly">Science Weekly</string>
    <string name="podcast_path_science_weekly">science/series/science</string>
    <string name="podcast_title_comfort_eating_with_grace_dent">Comfort Eating with Grace Dent</string>
    <string name="podcast_path_comfort_eating_with_grace_dent">lifeandstyle/series/comforteatingwithgracedent</string>
    <string name="podcast_title_australia_reads">Australia Reads</string>
    <string name="podcast_path_australia_reads">australia-news/series/australia-reads</string>
    <string name="podcast_title_full_story">Full Story</string>
    <string name="podcast_path_full_story">australia-news/series/full-story</string>
    <string name="podcast_title_australian_politics_live">Australian Politics Live</string>
    <string name="podcast_path_australian_politics_live">australia-news/series/australian-politics-live</string>
    <string name="podcast_title_the_guardian_books">The Guardian Books</string>
    <string name="podcast_path_the_guardian_books">books/series/books</string>
    <string name="podcast_title_the_guardian_brexit_means">The Guardian Brexit Means…</string>
    <string name="podcast_path_the_guardian_brexit_means">politics/series/brexit-means</string>
    <string name="podcast_title_forgotten_stories_of_football">Forgotten Stories of Football</string>
    <string name="podcast_path_forgotten_stories_of_football">football/series/forgotten-stories-of-football</string>
    <string name="podcast_title_innermost">Innermost</string>
    <string name="podcast_path_innermost">society/series/innermost</string>
    <string name="podcast_title_the_spin">The Spin</string>
    <string name="podcast_path_the_spin">sport/series/the-spin-podcast</string>
    <string name="podcast_title_chips_with_everything">Chips with Everything</string>
    <string name="podcast_path_chips_with_everything">technology/series/chips-with-everything</string>
    <string name="podcast_title_beyond_the_blade">Beyond the Blade</string>
    <string name="podcast_path_beyond_the_blade">society/series/beyondtheblade</string>
    <string name="podcast_title_we_need_to_talk_about">We Need to Talk About…</string>
    <string name="podcast_path_we_need_to_talk_about">membership/series/we-need-to-talk-about</string>
    <string name="podcast_title_the_story">The Story</string>
    <string name="podcast_path_the_story">news/series/the-story</string>
    <string name="podcast_title_small_changes">Small Changes</string>
    <string name="podcast_path_small_changes">global-development/series/global-development-podcast</string>
    <string name="podcast_title_a_neuroscientist_explains">A Neuroscientist Explains</string>
    <string name="podcast_path_a_neuroscientist_explains">science/series/a-neuroscientist-explains-podcast</string>
    <string name="podcast_title_the_guardian_uk_culture_podcast">The Guardian UK: Culture Podcast</string>
    <string name="podcast_path_the_guardian_uk_culture_podcast">arts/series/culture</string>
    <string name="podcast_title_behind_the_lines">Behind the Lines</string>
    <string name="podcast_path_behind_the_lines">australia-news/series/behind-the-lines-podcast</string>
    <string name="podcast_title_close_encounters">Close Encounters</string>
    <string name="podcast_path_close_encounters">lifeandstyle/series/close-encounters</string>
    <string name="podcast_title_what_would_a_feminist_do">What would a feminist do?</string>
    <string name="podcast_path_what_would_a_feminist_do">commentisfree/series/what-would-a-feminist-do</string>
    <string name="podcast_title_token">Token</string>
</resources>