<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Shows the entire "Discover" section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Crossword image -->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginLarge"
            android:contentDescription="@string/default_content_description"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:srcCompat="@drawable/ic_crossword" />

        <!-- Opens up the Play Store -->
        <TextView
            android:id="@+id/text_go_to_app"
            style="@style/NewsFeedSeeMore"
            android:layout_marginTop="@dimen/marginMedium"
            android:layout_marginEnd="@dimen/marginSmall"
            android:text="@string/label_get_app"
            android:textColor="@color/color_see_more"
            app:drawableEndCompat="@drawable/arrow_see_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Section name -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/marginMedium"
            android:letterSpacing="@fraction/letterSpacingLarge"
            android:text="@string/label_discover"
            android:textAllCaps="true"
            android:textColor="@color/colorRedDark"
            android:textSize="@dimen/textSizeSmall"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <!-- About section -->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLarge"
            android:layout_marginTop="@dimen/marginMedium"
            android:layout_marginEnd="@dimen/marginLarge"
            android:layout_marginBottom="@dimen/marginMedium"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="@fraction/letterSpacingSmall"
            android:lineSpacingExtra="@dimen/spaceSmaller"
            android:text="@string/label_game"
            android:textColor="@color/colorLightest"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaceSmallest"
        android:background="@color/colorDarkest" />
</LinearLayout>