<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Shows the "Reader" section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkerII">

        <!-- Section name -->
        <TextView
            android:id="@+id/textView99"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/marginMedium"
            android:letterSpacing="@fraction/letterSpacingLarge"
            android:text="@string/label_readers"
            android:textAllCaps="true"
            android:textColor="@color/colorRedDark"
            android:textSize="@dimen/textSizeSmall"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <!-- Opens up "Guardian Weekly's Global Community" webpage in "The Guardian -->
        <TextView
            android:id="@+id/text_get_involved"
            style="@style/NewsFeedSeeMore"
            android:text="@string/label_get_involved"
            android:layout_marginTop="@dimen/marginMedium"
            android:layout_marginEnd="@dimen/marginSmall"
            android:textColor="@color/color_see_more"
            app:drawableEndCompat="@drawable/arrow_see_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Global image -->
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginLarge"
            android:contentDescription="@string/default_content_description"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:srcCompat="@drawable/ic_world_blue" />

        <!-- About section -->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLarge"
            android:layout_marginTop="@dimen/marginMedium"
            android:layout_marginEnd="@dimen/marginLarge"
            android:layout_marginBottom="@dimen/marginMedium"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="@fraction/letterSpacingSmall"
            android:lineSpacingExtra="@dimen/spaceSmaller"
            android:text="@string/label_community"
            android:textColor="@color/colorLightest"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView99" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaceMedium"
        android:background="@color/colorDarkest" />
</LinearLayout>