<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_podcast">

    <!-- Shows Podcast thumbnail -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        app:cardCornerRadius="@dimen/spaceSmaller"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/podcast_about_thumbnail"
            android:layout_width="@dimen/widthThumbnailSmallII"
            android:layout_height="@dimen/heightThumbnailMediumII"
            android:contentDescription="@string/default_content_description"
            tools:srcCompat="@drawable/thumbnail_today_in_focus" />
    </androidx.cardview.widget.CardView>

    <!-- Shows brief info. about the Podcast -->
    <TextView
        android:id="@+id/podcast_about_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginLarge"
        android:layout_marginTop="@dimen/marginMedium"
        android:layout_marginEnd="@dimen/marginLarge"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:letterSpacing="@fraction/letterSpacingSmall"
        android:lineSpacingExtra="@dimen/spaceSmaller"
        android:textColor="@color/colorLight"
        android:textSize="@dimen/textSizeMediumII"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_warning"
        tools:text="@string/podcast_about" />

    <!-- Shows the podcast title -->
    <TextView
        android:id="@+id/podcast_about_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginLarge"
        android:layout_marginTop="@dimen/marginSmallII"
        android:layout_marginEnd="@dimen/marginLarge"
        android:gravity="center_horizontal"
        android:textColor="@color/colorLightest"
        android:textSize="@dimen/textSizeLarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:text="@string/podcast_title" />

    <!-- Opens the episode in "Google Podcast" app -->
    <ImageView
        android:id="@+id/image_podcast_google"
        style="@style/PodcastStyle"
        android:layout_marginTop="@dimen/marginMedium"
        android:layout_marginBottom="@dimen/marginMedium"
        android:contentDescription="@string/default_content_description"
        android:src="@drawable/ic_podcast_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podcast_about_about" />

    <!-- Opens up the podcast in "Apple Podcast" -->
    <ImageView
        android:id="@+id/image_podcast_apple"
        style="@style/PodcastStyle"
        android:layout_marginTop="@dimen/marginMedium"
        android:layout_marginEnd="@dimen/marginLargeII"
        android:layout_marginBottom="@dimen/marginMedium"
        android:contentDescription="@string/default_content_description"
        android:src="@drawable/ic_podcast_apple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_podcast_google"
        app:layout_constraintTop_toBottomOf="@+id/podcast_about_about" />

    <!-- Opens the episode in "Spotify" app -->
    <ImageView
        android:id="@+id/image_podcast_spotify"
        style="@style/PodcastStyle"
        android:layout_marginStart="@dimen/marginLargeII"
        android:layout_marginTop="@dimen/marginMedium"
        android:layout_marginBottom="@dimen/marginMedium"
        android:contentDescription="@string/default_content_description"
        android:src="@drawable/ic_podcast_spotify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_podcast_google"
        app:layout_constraintTop_toBottomOf="@+id/podcast_about_about" />

    <!-- Warns the user about podcast containing explicit content -->
    <TextView
        android:id="@+id/text_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginMedium"
        android:background="@drawable/background_red"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="@fraction/letterSpacingSmall"
        android:padding="@dimen/paddingSmall"
        android:text="@string/label_explicit"
        android:textColor="@color/colorLightest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podcast_about_title" />
</androidx.constraintlayout.widget.ConstraintLayout>